Clean readme per introduction in docs.